--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Certification</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#crypto">Crypto Monnaie</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -292,6 +295,13 @@
               3<sup>rd</sup>
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
+        </div>
+      </section>
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="crypto">
+        <div>
+          <h2 class="mb-5"> Crypto-monnaie </h2>
+          <iframe class="my-auto" scrolling="no" frameborder="0" src="https://coinpot.co/mine/dash/?ref=97767043E9CA&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
+          
         </div>
       </section>
 
