--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
 
+    <!--Custom favicon-->
+    <link rel="icon" type="image/png" href="logo.png"/>
   </head>
 
   <body id="page-top">
@@ -301,7 +303,7 @@
         <div>
           <h2 class="mb-5"> Crypto-monnaie </h2>
           <iframe class="my-auto" scrolling="no" frameborder="0" src="https://coinpot.co/mine/dash/?ref=97767043E9CA&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
-          
+
         </div>
       </section>
 
