--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">Intérêts &amp; Loisirs</h2>
+          <p>En plus d'être un développeur Web, je profite de la plupart de mon temps à l'extérieur. En hiver, je suis un skieur avide et un grimpeur de glace novice. Pendant les mois les plus chauds, j'aime faire voler des drone, me promener en vélo et bien entendu faire des barbecues.</p>
+          <p class="mb-0">Quand je suis enfermé à l'intérieur, je regarde un certain nombre de films et de séries, je consacre une grande partie de mon temps libre à explorer les dernières avancées technologiques dans plusieurs domaines, et lorsque la saison arrive, je suis de prêt l'e-sport..</p>
         </div>
       </section>
 
