--- a/index.html
+++ b/index.html
@@ -313,6 +313,9 @@
       </section>
 
     </div>
+    
+    <!--BlockAdBlock-->
+    <script src="adblock.js"></script>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
