--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Site Perso</span>
+      <span class="d-block d-lg-none">Site Personnelle</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -42,25 +42,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">A propos</a>
+          <a class="nav-link js-scroll-trigger" href="#about">À propos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Expériences</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Competence</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Compétences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Centre d'interet</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Centres d'intérêt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Certification</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#crypto">Crypto Monnaie</a>
+          <a class="nav-link js-scroll-trigger" href="#crypto">Crypto-Monnaie</a>
         </li>
       </ul>
     </div>
@@ -78,10 +78,10 @@
           33 rue de laborde · Auxerre, 89000 - <a href="mailto:patrick.de.almeida@gmail.com">patrick.de.almeida89@gmail.com</a>
 
         </div>
-        <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="mb-5"> </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://www.facebook.com/ToeiAzarothis">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -89,7 +89,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://twitter.com/De_Almeida89" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -97,7 +97,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/patrick-de-almeida/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://github.com/toeiazarothis/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -155,8 +155,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
+            <h3 class="mb-0">Interim</h3>
+            <div class="subheading mb-3"></div>
             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -198,9 +198,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
-        <h2 class="mb-5">Skills</h2>
+        <h2 class="mb-5">Compétences</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Langages de programmation &amp; Outils</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
             <i class="devicon-ubuntu-plain-"></i>
@@ -216,9 +216,6 @@
           </li>
           <li class="list-inline-item">
             <i class="devicon-github-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicon-gitlab-plain"></i>
           </li>
           <li class="list-inline-item">
             <i class="devicon-trello-plain"></i>
@@ -243,7 +240,7 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <!-- <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -260,15 +257,15 @@
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Kanban
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Intérêts &amp; Loisirs</h2>
-          <p>En plus d'être un développeur Web, je profite de la plupart de mon temps à l'extérieur. En hiver, je suis un skieur avide et un grimpeur de glace novice. Pendant les mois les plus chauds, j'aime faire voler des drone, me promener en vélo et bien entendu faire des barbecues.</p>
-          <p class="mb-0">Quand je suis enfermé à l'intérieur, je regarde un certain nombre de films et de séries, je consacre une grande partie de mon temps libre à explorer les dernières avancées technologiques dans plusieurs domaines, et lorsque la saison arrive, je suis de prêt l'e-sport..</p>
+          <p>En plus d'être un développeur Web, je profite de la plupart de mon temps à l'extérieur. En hiver, j'aime faire de longue promenade sous la neige. Pendant les mois les plus chauds, j'aime faire voler des drone, me promener en vélo et bien entendu faire des barbecues.</p>
+          <p class="mb-0">Quand je suis enfermé à l'intérieur, je regarde un certain nombre de films et de séries, je consacre une grande partie de mon temps libre à explorer les dernières avancées technologiques dans plusieurs domaines, et lorsque la saison arrive, je surveiller de prêt l'e-sport..</p>
         </div>
       </section>
 
@@ -321,8 +318,7 @@
           </button>
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
-              <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincash/?ref=97767043E9CA&mode=widget" style="overflow:hidden;width:324px;height:470px;">
-              </iframe>
+              En cours de mise en place
             </div>
           </div>
         </div>
