--- a/index.html
+++ b/index.html
@@ -271,41 +271,30 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Certificats de réussite</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer
+              Comprendre le Bitcoin et la Blockchain
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification
+              Apprenez à créer votre site web avec HTML5 et CSS3
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009
+              Apprenez à naviguer en sécurité sur Internet
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+              Comprendre le Web
             </li>
+            <!--
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008
+
             </li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006
-            </li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005
-            </li>
+           -->
           </ul>
         </div>
       </section>
@@ -319,6 +308,7 @@
           <div class="collapse" id="collapseExample">
             <div class="card card-body">
               En cours de mise en place
+              <!-- <iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincash/?ref=97767043E9CA&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe> -->
             </div>
           </div>
         </div>
