--- a/index.html
+++ b/index.html
@@ -119,59 +119,42 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
         <h2 class="mb-5">Experience</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Distributeur de flyer</h3>
             <div class="subheading mb-3">Gaston Diffusion</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <p>Pour la marque Orange, j'ai effectué une distribution de flyers accompagné de goodies afin de mettre en avant une offre commerciale sur les forfaits téléphone ainsi que sur Orange Bank.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Octobre 2017</span>
           </div>
         </div>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Agent d'accueil</h3>
             <div class="subheading mb-3">Pôle emploi</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <p>Cette experience fut effectuer par le biais du service civique, j'ai eu l'occasion de partager mes connaissances sur le web et sur l'informatique. L'acceuil des </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">December 2016 - March 2016</span>
           </div>
         </div>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Téléconseiller</h3>
             <div class="subheading mb-3">Armatis</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <p>Pour le groupe Canal, j'ai effectué de la prospection téléphonique ainsi que de la vente en fonction des profils clients.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Octobre 2014 - Decembre 2014</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Interim</h3>
-            <div class="subheading mb-3"></div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
-
       </div>
-
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
         <h2 class="mb-5">Education</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Groupe ESC &amp; Simplon</h3>
@@ -199,7 +182,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
         <h2 class="mb-5">Compétences</h2>
-
         <div class="subheading mb-3">Langages de programmation &amp; Outils</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
