--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Site Personnelle</span>
+      <span class="d-block d-lg-none">Site personelle CV </span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -48,16 +48,16 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Expériences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#formation">Formations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Compétences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Centres d'intérêt</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Certification</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Certification</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Centres d'intérêt</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#crypto">Crypto-Monnaie</a>
@@ -74,14 +74,14 @@
           <span class="text-primary">Patrick</span>
         </h1>
         <div class="subheading mb-5">
-          27 rue gutsave michel · Troyes, 10000 - <a href="tel:0762302101">07.62.30.21.01</a><br>
+          201 Avenue General Leclerc · Troyes, 10000 - <a href="tel:0762302101">07.62.30.21.01</a><br>
           33 rue de laborde · Auxerre, 89000 - <a href="mailto:patrick.de.almeida@gmail.com">patrick.de.almeida89@gmail.com</a>
 
         </div>
         <p class="mb-5"> </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="https://www.facebook.com/ToeiAzarothis">
+            <a href="https://www.facebook.com/ToeiAzarothis" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -97,7 +97,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/patrick-de-almeida/">
+            <a href="https://www.linkedin.com/in/patrick-de-almeida/" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/toeiazarothis/">
+            <a href="https://github.com/toeiazarothis/" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -121,6 +121,16 @@
         <h2 class="mb-5">Experience</h2>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Enqueteur / Client Mystere</h3>
+            <div class="subheading mb-3">Oka Ola / Qualisens / Mobeye / BeMyEye</div>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2012 - 2017</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Distributeur de flyer</h3>
             <div class="subheading mb-3">Gaston Diffusion</div>
             <p>Pour la marque Orange, j'ai effectué une distribution de flyers accompagné de goodies afin de mettre en avant une offre commerciale sur les forfaits téléphone ainsi que sur Orange Bank.</p>
@@ -131,30 +141,60 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Agent d'accueil</h3>
-            <div class="subheading mb-3">Pôle emploi</div>
-            <p>Cette experience fut effectuer par le biais du service civique, j'ai eu l'occasion de partager mes connaissances sur le web et sur l'informatique. L'acceuil des </p>
+            <h3 class="mb-0">Vendeur a domicile independant</h3>
+            <div class="subheading mb-3">Akeo</div>
+            <p>Vente de produit de la societé AKEO.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2016 - March 2016</span>
+            <span class="text-primary">2017</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Agent d'accueil</h3>
+            <div class="subheading mb-3">Pôle emploi</div>
+            <p>Cette experience fut effectuer par le biais du service civique, j'ai eu l'occasion de partager mes connaissances sur le web et sur l'informatique auprés du public de Pôle emploi.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Decembre 2015 - Mars 2016</span>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Téléconseiller</h3>
             <div class="subheading mb-3">Armatis</div>
-            <p>Pour le groupe Canal, j'ai effectué de la prospection téléphonique ainsi que de la vente en fonction des profils clients.</p>
+            <p>Pour le groupe Canal, j'ai effectué de la prospection téléphonique ainsi que de la vente complementaire en fonction des profils de chaque clients.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Octobre 2014 - Decembre 2014</span>
           </div>
         </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Electricien</h3>
+            <div class="subheading mb-3">Arelco / CHSY / Bureau</div>
+            <p>Durant mon cursus scolaire j'ai eu l'opportunite de realiser des stage de longue durée dans divers entreprise afin de mieux connaitre le monde du travail.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2010 - 2014</span>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="formation">
       <div class="my-auto">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5">Formations</h2>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Mission local de Troyes</h3>
+            <div class="subheading mb-3">Certificat</div>
+            <div>CléA</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Fevrier 2018</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Groupe ESC &amp; Simplon</h3>
@@ -165,12 +205,31 @@
             <span class="text-primary">Mai 2016 - Décembre 2016</span>
           </div>
         </div>
-        <br>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Pompier de La Chapelle-St-Luc</h3>
+            <div class="subheading mb-3">Certificat</div>
+            <div>Prévention et secours civiques de niveau 1 (PSC1)</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Fevrier 2018</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Lycée Joseph Fourier</h3>
             <div class="subheading mb-3">Baccalauréat professionnel</div>
             <div>Électrotechnique et équipement communiquant</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Septembre 2010 - Juin 2013</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Lycée Joseph Fourier</h3>
+            <div class="subheading mb-3">Certificat</div>
+            <div>Sauveteur Secouriste du Travail (SST)</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Septembre 2010 - Juin 2013</span>
@@ -243,14 +302,6 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Intérêts &amp; Loisirs</h2>
-          <p>En plus d'être un développeur Web, je profite de la plupart de mon temps à l'extérieur. En hiver, j'aime faire de longue promenade sous la neige. Pendant les mois les plus chauds, j'aime faire voler des drone, me promener en vélo et bien entendu faire des barbecues.</p>
-          <p class="mb-0">Quand je suis enfermé à l'intérieur, je regarde un certain nombre de films et de séries, je consacre une grande partie de mon temps libre à explorer les dernières avancées technologiques dans plusieurs domaines, et lorsque la saison arrive, je surveiller de prêt l'e-sport..</p>
-        </div>
-      </section>
-
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Certificats de réussite</h2>
@@ -278,6 +329,14 @@
             </li>
            -->
           </ul>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Intérêts &amp; Loisirs</h2>
+          <p>En plus d'être un développeur Web, je profite de la plupart de mon temps à l'extérieur. En hiver, j'aime faire de longue promenade sous la neige. Pendant les mois les plus chauds, j'aime faire voler des drone, me promener en vélo et bien entendu faire des barbecues.</p>
+          <p class="mb-0">Quand je suis enfermé à l'intérieur, je regarde un certain nombre de films et de séries, je consacre une grande partie de mon temps libre à explorer les dernières avancées technologiques dans plusieurs domaines, et lorsque la saison arrive, je regarde quelque competition de e-sport..</p>
         </div>
       </section>
 
