--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Site personelle CV </span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -119,6 +119,16 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
         <h2 class="mb-5">Experience</h2>
+        <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Poste</h3>
+            <div class="subheading mb-3">Entreprise</div>
+            <p>Description du poste</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Date</span>
+          </div>
+        </div> -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Enqueteur / Client Mystere</h3>
@@ -141,7 +151,7 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Vendeur a domicile independant</h3>
+            <h3 class="mb-0">Vendeur à domicile independant</h3>
             <div class="subheading mb-3">Akeo</div>
             <p>Vente de produit de la societé AKEO.</p>
           </div>
