--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">À propos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" data-toggle="modal" data-target=".Portfolio" href="">Portfolio</a>
+          <a class="nav-link js-scroll-trigger" data-toggle="modal" data-target=".Portfolio" href="">Portfolio (en development)</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Expériences</a>
@@ -371,7 +371,7 @@
     </div>
     <!-- Modal -->
     <!-- Large modal -->
-    <div class="modal fade Portfolio" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal fade Portfolio" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
@@ -381,8 +381,17 @@
             </button>
           </div>
           <div class="modal-body">
-            <div class="col-md-4">.col-md-4</div>
-            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/Portfolio/TSR/tsr.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                  <img src="img/Portfolio/TSR/tsr.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                  <img src="img/Portfolio/TSR/tsr.jpg" alt="">
+                </div>
           </div>
         </div>
       </div>
