Update css for modal large & portfolio & opengraph

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
   <title>ToeiAzarothis - CV</title>
 
+  <!-- Opengraph -->
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="img">
+  <meta property="og:site_name" content="CV de Patrick">
+  <meta property="og:locale" content="fr"> 
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -70,7 +78,6 @@
   </nav>
 
   <div class="container-fluid p-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
         <h1 class="mb-0">De Almeida
@@ -79,7 +86,13 @@
         <div class="subheading mb-5">
           201 Avenue General Leclerc · Troyes, 10000 - <a href="tel:0762302101">07.62.30.21.01</a><br>
           33 rue de laborde · Auxerre, 89000 - <a href="mailto:patrick.de.almeida@gmail.com">patrick.de.almeida89@gmail.com</a>
-
+        </div>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          Le site est <strong>actuellement en refonte.</strong> Celui ci est cependant continuellement mis a jour.<br>
+          Il devrait prochainement sortir en version final.
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         <p class="mb-5"> </p>
         <ul class="list-inline list-social-icons mb-0">
@@ -384,14 +397,17 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-4">
-                  <img src="img/Portfolio/TSR/tsr.jpg" alt="">
+                  <img src="img/Portfolio/TSR/tsr.jpg" class="img-fluid img-thumbnail rounded" alt="">
+                  <p>Auto ecole TSR</p>
                 </div>
                 <div class="col-md-4">
-                  <img src="img/Portfolio/TSR/tsr.jpg" alt="">
+                  <img src="img/Portfolio/TSR/tsr.jpg" class="img-fluid img-thumbnail rounded" alt="">
                 </div>
                 <div class="col-md-4">
-                  <img src="img/Portfolio/TSR/tsr.jpg" alt="">
+                  <img src="img/Portfolio/TSR/tsr.jpg" class="img-fluid img-thumbnail rounded" alt="">
                 </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
