add image for company's brand and update color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="img">
   <meta property="og:site_name" content="CV de Patrick">
-  <meta property="og:locale" content="fr"> 
+  <meta property="og:locale" content="fr">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Site personelle CV </span>
+      <span class="d-block d-lg-none"><img src="img/favicon.ico" alt=""> Site personelle CV </span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1.jpg" alt="">
       </span>
