--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none"><img src="img/favicon.ico" alt=""> Site personelle CV </span>
       <span class="d-none d-lg-block">
+        <img src="img/favicon.ico" alt=""><br><br>
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1.jpg" alt="">
       </span>
     </a>
