--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Centres d'intérêt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#crypto">Crypto-Monnaie</a>
+          <a class="nav-link js-scroll-trigger" href="#crypto">Bitcoin</a>
         </li>
       </ul>
     </div>
