mise a jour du cv

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="img">
-  <meta property="og:site_name" content="CV de Patrick">
+  <meta property="og:site_name" content="CV de Patrick De Almeida">
   <meta property="og:locale" content="fr">
 
   <!-- Bootstrap core CSS -->
@@ -53,9 +53,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">À propos</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" data-toggle="modal" data-target=".Portfolio" href="">Portfolio (en development)</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Expériences</a>
         </li>
@@ -153,7 +153,18 @@
             <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2012 - 2017</span>
+            <span class="text-primary">2012 - 2019</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Animateur d’espace public numérique </h3>
+            <div class="subheading mb-3">Maison de l'Animation Culturelle</div>
+            <p>Réaliser des atelier sur les dangers d'internet et les fraudes <br>
+              Formation à l'usage de l'informatique</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - 2018</span>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -214,6 +225,16 @@
         <h2 class="mb-5">Formations</h2>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Y Schools Troyes</h3>
+            <div class="subheading mb-3">Titre professionnel</div>
+            <div>Conseiller médiateur numérique</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - 2019</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Mission local de Troyes</h3>
             <div class="subheading mb-3">Certificat</div>
             <div>CléA</div>
@@ -224,12 +245,12 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Groupe ESC &amp; Simplon</h3>
-            <div class="subheading mb-3">Diplôme de niveau 4</div>
+            <h3 class="mb-0">Y Schools Troyes &amp; Simplon</h3>
+            <div class="subheading mb-3"></div>
             <div>Développeur web</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Mai 2016 - Décembre 2016</span>
+            <span class="text-primary">2016 - 2016</span>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -239,7 +260,7 @@
             <div>Prévention et secours civiques de niveau 1 (PSC1)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Fevrier 2018</span>
+            <span class="text-primary">2018</span>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -249,7 +270,7 @@
             <div>Électrotechnique et équipement communiquant</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Septembre 2010 - Juin 2013</span>
+            <span class="text-primary">2010 - 2013</span>
           </div>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -259,7 +280,7 @@
             <div>Sauveteur Secouriste du Travail (SST)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Septembre 2010 - Juin 2013</span>
+            <span class="text-primary">2010 - 2013</span>
           </div>
         </div>
       </div>
