--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
-    <title>Refonte Graphique Patrick De Almeida</title>
+    <title>Refonte Graphique - Patrick De Almeida</title>
   </head>
   <body>
     <header class="masthead">
