--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
+    <video src="media/Toei_Azarothis.mp4" autoplay poster="posterimage.jpg">
+
+    </video>
     <title>Refonte Graphique - Patrick De Almeida</title>
   </head>
   <body>
