--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
-    <video src="media/Toei_Azarothis.mp4" autoplay poster="posterimage.jpg">
-
-    </video>
     <title>Refonte Graphique - Patrick De Almeida</title>
   </head>
   <body>
@@ -22,6 +19,10 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in"></div>
+
+          <video src="media/Toei_Azarothis.mp4" autoplay>
+
+          </video>
           <div class="intro-heading text-uppercase">Refonte Graphique !</div>
         </div>
       </div>
