--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="intro-text">
           <div class="intro-lead-in"></div>
 
-          <video src="media/Toei_Azarothis.mp4" autoplay>
+          <video src="media/Toei_Azarothis.mp4" type="video/mp4" autoplay  src="media/Toei-Azarothis.webm" type"video/webm">
 
           </video>
           <div class="intro-heading text-uppercase">Refonte Graphique !</div>
