--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <div class="intro-text">
           <div class="intro-lead-in"></div>
 
-          <video src="media/Toei_Azarothis.mp4" type="video/mp4" autoplay  src="media/Toei-Azarothis.webm" type"video/webm">
-
-          </video>
+          <video src="media/Toei_Azarothis.mp4" type="video/mp4" autoplay  src="media/Toei-Azarothis.webm" type"video/webm">    Sorry, your browser doesn't support embedded videos.</video>
           <div class="intro-heading text-uppercase">Refonte Graphique !</div>
         </div>
       </div>
