--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   </head>
   <body>
     <header class="masthead">
+      <video autoplay loop poster="Toei_Azarothis.jpg" id="bgvid">
+        <source src="media/Toei-Azarothis.webm" type="video/webm">
+        <source src="media/Toei_Azarothis.mp4" type="video/mp4">
+      </video>
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in"></div>
