--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   </head>
   <body>
     <header class="masthead">
-      <video autoplay loop poster="Toei_Azarothis.jpg" id="bgvid">
-        <source src="media/Toei-Azarothis.webm" type="video/webm">
-        <source src="media/Toei_Azarothis.mp4" type="video/mp4">
-      </video>
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in"></div>
-
-          <video src="media/Toei_Azarothis.mp4" type="video/mp4" autoplay  src="media/Toei-Azarothis.webm" type"video/webm">    Sorry, your browser doesn't support embedded videos.</video>
           <div class="intro-heading text-uppercase">Refonte Graphique !</div>
         </div>
       </div>
     </header>
+    <div class="container">
+      <video autoplay loop poster="Toei_Azarothis.jpg" id="bgvid">
+        <source src="media/Toei-Azarothis.webm" type="video/webm">
+        <source src="media/Toei_Azarothis.mp4" type="video/mp4">
+      </video>
+    </div>
 
   </body>
 </html>
