--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       </div>
     </header>
     <div class="container">
-      <video autoplay loop poster="Toei_Azarothis.jpg" id="bgvid">
-        <source src="media/Toei-Azarothis.webm" type="video/webm">
-        <source src="media/Toei_Azarothis.mp4" type="video/mp4">
-      </video>
+      <img src="media/ToeiAzarothis.gif" alt="">
     </div>
 
   </body>
